--- a/index.html
+++ b/index.html
@@ -1,43 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Toboolist</title>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
+
 <body>
     <header>
         <img src="/img/Logo.png" alt="logo">
         <h1>Toboolist</h1>
     </header>
     <main>
-        <div class="contenitore"><!--Div contenitore -->
-            <nav><!--nav con bottoni -->
+        <div class="contenitore">
+            <!--Div contenitore -->
+            <nav>
+                <!--nav con bottoni -->
                 <button class="primobottone">Add Task</button>
-                <button class="secondobottone">Add section</button>
-            </nav><!--/nav-->
-        
-            <section> <!--NewTask-->
-            <h3>&#9662; New Task</h3>
-                &check;Quarterly Newsletter <button class="editoriale" id="bottoneradio">Editorial</button>
-            </section><!--/newtask-->
-            <section><!--Today-->
+                <button class="secondobottone">Add Section</button>
+            </nav>
+            <!--/nav-->
+
+            <section>
+                <!--NewTask-->
+                <h3>&#9662; New Task</h3>
+                <span class="check">&check;</span> Quarterly Newsletter <button class="editoriale"
+                    id="bottoneradio">Editorial</button>
+            </section>
+            <!--/newtask-->
+            <section>
+                <!--Today-->
                 <h3>&#9662; Today</h3>
-                &check;Recruting blog post <button class="editoriale" id="bottoneradio">Editorial</button> <br>
-                &check;Mobile app luaunch <button class="q1" id="bottoneradio">Q1 Goals</button> <br>
-                &#9447;Interview John H. <button class="recruting" id="bottoneradio">Recruting</button> <br>
-                &check;Quarterly Newsletter <button class="mobile" id="bottoneradio">Mobile</button> <br>
-                </section><!--/Today-->
-                <section><!--Upcoming-->
-                    <h3>&#9662; Upcoming</h3>
-                    &#9447;Schedule meeting whit Alex 
-                    &check;Homepage refresh <button class="website" id="bottoneradio">Editorial</button> <br>
-                    &check;Onboard ne Sales team members <button class="sales" id="bottoneradio">Sales</button><br>
-                    &check;Review editorial calendar <button class="editoriale" id="bottoneradio">Editorial</button> <br>
-                    </section>
-        </div><!--Chiusura Div Contenitore -->
+                <span class="check">&check;</span> Recruting blog post <button class="editoriale"
+                    id="bottoneradio">Editorial</button> <br>
+                <span class="check">&check;</span> Mobile app luaunch <button class="q1" id="bottoneradio">Q1
+                    Goals</button> <br>
+                <span class="x">&#9447;</span> Interview John H. <button class="recruting"
+                    id="bottoneradio">Recruting</button> <br>
+                <span class="check">&check;</span> Summit update to mobile storefronts <button class="mobile"
+                    id="bottoneradio">Mobile</button> <br>
+            </section>
+            <!--/Today-->
+            <section>
+                <!--Upcoming-->
+                <h3>&#9662; Upcoming</h3>
+                <span class="x">&#9447;</span> Schedule meeting whit Alex <br>
+                <span class="check">&check;</span> Homepage refresh <button class="website"
+                    id="bottoneradio">Website</button> <br>
+                <span class="check">&check;</span> Onboard ne Sales team members <button class="sales"
+                    id="bottoneradio">Sales</button><br>
+                <span class="check">&check;</span> Review editorial calendar <button class="editoriale"
+                    id="bottoneradio">Editorial</button> <br>
+            </section>
+        </div>
+        <!--Chiusura Div Contenitore -->
     </main>
     <footer></footer>
 </body>
+
 </html>
