--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 </head>
 
 <body>
-    <header>
+    <header><!--header-->
         <img src="/img/Logo.png" alt="logo">
         <h1>Toboolist</h1>
-    </header>
+    </header><!--/header-->
     <main>
         <div class="contenitore">
             <!--Div contenitore -->
@@ -54,7 +54,7 @@
                     id="bottoneradio">Sales</button><br>
                 <span class="check">&check;</span> Review editorial calendar <button class="editoriale"
                     id="bottoneradio">Editorial</button> <br>
-            </section>
+            </section><!--/Upcoming-->
         </div>
         <!--Chiusura Div Contenitore -->
     </main>
