--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Toboolist</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
     <header><!--header-->
-        <img src="/img/Logo.png" alt="logo">
+        <img src="./img/Logo.png" alt="logo">
         <h1>Toboolist</h1>
     </header><!--/header-->
     <main>
